MB before rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
  Copyright iChoice4U BV
+Adding changes before rebasing conflict
 -->
 <head>
 	<title>An Example Website</title>
