--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
  Real silly stuff here
 -->
 <head>
-	<title>Awfull Website</title>
+	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Whatever and more
+			Unsure what to put up here.
 		</p>
 	</main>
 	<footer class="container">
