MB conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
  Copyright iChoice4U BV
-Adding changes before rebasing conflict
+ Real silly stuff here
 -->
 <head>
-	<title>An Example Website</title>
+	<title>Awfull Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@ Adding changes before rebasing conflict
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Unsure what to put up here.
+			Whatever and more
 		</p>
 	</main>
 	<footer class="container">
