local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; iChoice4U 2020</p>
+		<p>&copy; iChoice4U 2020 All Rights Reserved</p>
 	</footer>
 </body>
 </html>
