--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
  Copyright iChoice4U BV
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A new Stash title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Unsure what to put up here.
+			Adding more stuff now.
 		</p>
 	</main>
 	<footer class="container">
