Changes after git-stash-branch command

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
  Copyright iChoice4U BV
 -->
 <head>
-	<title>A new Stash title</title>
+	<title>Again a new Stash title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
