--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Adding title for multiple Stashes</title>
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
